# Copyright (c) 2025 Glavo
# SPDX-License-Identifier: MPL-2.0

[workspace]
resolver = "3"
members = ["janex-core", "janex-cli"]

[workspace.package]
version = "0.1.0"
authors = ["Glavo"]
edition = "2024"

[workspace.dependencies]
clap = "4.6.0"
janex-core = { path = "janex-core" }
serde_json = "1.0.149"
sha2 = "0.10.9"
sm3 = "0.4.2"
toml = "1.0.7"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
zstd = "0.13.3"
