# Copyright (c) 2025 Glavo
# SPDX-License-Identifier: MPL-2.0

[package]
name = "janex-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json.workspace = true
sha2.workspace = true
sm3.workspace = true
toml.workspace = true
xxhash-rust.workspace = true
zstd.workspace = true
