# Copyright (c) 2025 Glavo
# SPDX-License-Identifier: MPL-2.0

[package]
name = "janex-core"
version.workspace = true
edition.workspace = true

[dependencies]
cel-interpreter = "0.10.0"
os_info = "3.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
sm3.workspace = true
toml.workspace = true
xxhash-rust.workspace = true
zstd.workspace = true
